# telltale

./: .envrc  .gitattributes  .gitignore  ARTIFACT.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Justfile  LICENSE  README.md  book.toml  clippy.toml  deny.toml  flake.nix  justfile
choreography/: Cargo.toml
choreography/benches/: choreography_bench.rs  enhanced_features.rs  rumpsteak_handler_bench.rs
choreography/examples/: debug_param_roles.rs  error_demo.rs  extension_capability.rs  extension_logging.rs  extension_workflow.rs  parameterized_roles_complete.rs  parameterized_roles_direct.rs  rumpsteak_client_server.rs  rumpsteak_three_party_negotiation.rs
choreography/src/: lib.rs
choreography/src/ast/: choreography.rs  local_type.rs  message.rs  mod.rs  protocol.rs  role.rs
choreography/src/compiler/: analysis.rs  codegen.rs  effects_codegen.rs  mod.rs  parser.rs  projection.rs
choreography/src/effects/: algebra.rs  extension.rs  handler.rs  interpreter.rs  mod.rs  registry.rs
choreography/tests/: annotation_tests.rs  comprehensive_edge_cases.rs  dynamic_role_tests.rs  effects_edge_cases.rs  effects_test.rs  extension_integration.rs  integration_test.rs  integration_tests.rs  namespace_tests.rs  parser_test.rs  projection_patterns_test.rs  proptest_analysis.rs  proptest_proj_simple.rs  proptest_projection.rs  rumpsteak_handler_test.rs  wasm_compat.rs  wasm_integration.rs
examples/wasm-ping-pong/: Cargo.toml  README.md  build.sh  index.html  test.html
examples/wasm-ping-pong/src/: lib.rs
external-demo/: Cargo.toml
external-demo-macros/: Cargo.toml
external-demo-macros/examples/: final_test.rs
external-demo-macros/src/: choreography.rs  effect_handlers.rs  lib.rs
external-demo/examples/: extension_demo.rs  secure_request_response.rs  simple_ping_pong.rs  threshold_ceremony.rs
external-demo/src/: aura_extensions.rs  lib.rs
external-demo/tests/: basic_feature_inheritance_test.rs  choice_constructs_test.rs  choice_parsing_test.rs  choice_syntax_demo.rs
macros/: Cargo.toml
macros/src/: choreography.rs  lib.rs  message.rs  session.rs  test_dead_code.rs
rust/caching/: Cargo.toml
rust/caching/src/: cache.rs  client.rs  main.rs  origin.rs
rust/choreography/: BUG_REPORT_branch_label_message_names.md  Cargo.toml
rust/choreography/benches/: choreography_bench.rs  enhanced_features.rs  hot_paths.rs  rumpsteak_handler_bench.rs  telltale_handler_bench.rs
rust/choreography/examples/: authority_surface.rs  choreography_tour.rs  debug_param_roles.rs  error_demo.rs  extension_capability.rs  extension_example.rs  extension_logging.rs  extension_workflow.rs  macro_choreography.rs  new_features_demo.rs  parameterized_roles_complete.rs  parameterized_roles_direct.rs  parameterized_roles_full.rs  roles_parameterized.rs  rumpsteak_client_server.rs  rumpsteak_three_party_negotiation.rs  tcp_ping_pong.rs  telltale_client_server.rs  telltale_three_party_negotiation.rs  three_party_negotiation.rs  threshold_signatures.rs  topology_integration.rs
rust/choreography/src/: ast.rs  extensions.rs  generated_effects.rs  identifiers.rs  lib.rs  tracing.rs
rust/choreography/tests/: annotation_tests.rs  authority_compile_fail.rs  choreo_fmt_cli_tests.rs  codegen_tests.rs  comprehensive_edge_cases.rs  dynamic_role_tests.rs  effects_edge_cases.rs  effects_test.rs  effects_tests.rs  extensible_parser_comprehensive_tests.rs  extension_integration.rs  extensive_parser_tests.rs  handler_integration.rs  handler_integration_tests.rs  in_memory_handler_tests.rs  integration_test.rs  integration_tests.rs  namespace_tests.rs  ndet_collections_guard.rs  nondeterminism_collections_guard.rs  parser_test.rs  parser_tests.rs  projection_patterns_test.rs  projection_tests.rs  proptest_analysis.rs  proptest_parser_rt.rs  proptest_proj_simple.rs  proptest_projection.rs  recording_handler_tests.rs  role_family_integration_tests.rs  rumpsteak_handler_test.rs  rumpsteak_handler_tests.rs  runner_codegen_tests.rs  simulation_tests.rs  telltale_handler_test.rs  telltale_handler_tests.rs  wasm_compat.rs  wasm_integration.rs
rust/codegen/: Cargo.toml
rust/codegen/src/: ir.rs  lib.rs
rust/fsm/: Cargo.toml
rust/fsm/src/: convert.rs  lib.rs  local.rs  mermaid.rs  petrify.rs
rust/fsm/tests/: dot_roundtrip.rs  proptest_subtype.rs  token_id_safety.rs
rust/language/: Cargo.toml
rust/language/fuzz/: Cargo.toml
rust/language/src/: effect_spec.rs  extensions.rs  integration.rs  lib.rs  module_codegen.rs
rust/lean-bridge/: Cargo.toml
rust/lean-bridge/examples/: lean_validation.rs
rust/lean-bridge/fixtures/: lean-extended.choreo  lean-failing.choreo  lean-sample.choreo
rust/lean-bridge/src/: equivalence.rs  equivalence_golden_cases.rs  export.rs  import.rs  invariants.rs  lib.rs  protocol_machine_runner.rs  protocol_machine_trace.rs  runner.rs  runner_projection_export.rs  schema.rs  semantic_objects.rs  sim_reference.rs  test_utils.rs  validate.rs  vm_export.rs  vm_runner.rs  vm_runner_json_parsing.rs  vm_runner_parsing.rs  vm_trace.rs
rust/lean-bridge/tests/: coherence_tests.rs  generated_effect_schema.rs  golden_equivalence_tests.rs  invariant_verification.rs  invariant_verification_tests.rs  lean_integration_tests.rs  live_equivalence_tests.rs  merge_semantics_tests.rs  projection_equivalence.rs  projection_equivalence_tests.rs  projection_runner_tests.rs  property_tests.rs  proptest_async_subtyping.rs  proptest_bundle.rs  proptest_bundle_transport.rs  proptest_json_roundtrip.rs  proptest_projection.rs  protocol_machine_composition_stress.rs  protocol_machine_correspondence_tests.rs  protocol_machine_cross_target_tests.rs  schema_version_tests.rs  (+10 more)
rust/lean-exporter/: Cargo.toml
rust/lints/: Cargo.toml
rust/machine/: Cargo.toml
rust/macros/: Cargo.toml
rust/search/: Cargo.toml
rust/simulator/: Cargo.toml
rust/theory/: Cargo.toml
rust/transport/: Cargo.toml  README.md
rust/types/: Cargo.toml
rust/ui/: Cargo.toml
rust/viewer/: Cargo.toml
rust/vm/: Cargo.toml
rust/web/: Cargo.toml  Dioxus.toml  index.html  package-lock.json  package.json  tailwind.config.cjs
(+3153 files in other folders)
