[package]
name = "external-demo-macros"
version = "0.6.0"
edition = "2021"

# This is an external project - exclude from telltale workspace
[workspace]

[lib]
proc-macro = true

[features]
default = ["proc-macro"]
proc-macro = []

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
telltale-choreography = { path = "../rust/choreography" }

# Async trait support for generated code
async-trait = "0.1"
