[package]
name = "external-demo"
version = "0.6.0"
edition = "2021"

# This is an external project - exclude from telltale workspace
[workspace]

[dependencies]
telltale = { path = ".." }
external-demo-macros = { path = "../external-demo-macros" }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[example]]
name = "simple_ping_pong"
path = "examples/simple_ping_pong.rs"

[[example]]
name = "secure_request_response"
path = "examples/secure_request_response.rs"

[[example]]
name = "threshold_ceremony"
path = "examples/threshold_ceremony.rs"

[[example]]
name = "extension_demo"
path = "examples/extension_demo.rs"
