[package]
name = "wasm-ping-pong"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rumpsteak-aura = { path = "../..", features = ["wasm"] }
rumpsteak-aura-choreography = { path = "../../rust/choreography", features = ["wasm"] }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
console_error_panic_hook = "0.1"
tracing = "0.1"
tracing-wasm = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]

[profile.release]
opt-level = "s"  # Optimize for size
lto = true

