[package]
name = "telltale-choreography"
version = "0.9.1"
authors = ["Sam Hart"]
edition = "2021"
rust-version = "1.75"
description = "Choreographic programming for Telltale - effect-based distributed protocols"
readme = "../../README.md"
repository = "https://github.com/hxrts/telltale"
license = "MIT OR Apache-2.0"
keywords = ["choreography", "session", "types", "effects"]
categories = ["asynchronous", "concurrency"]

[lib]
bench = false

[dependencies]
telltale = { path = "../..", version = "0.9.1" }
telltale-macros = { path = "../macros", version = "0.9.1" }
telltale-types = { path = "../types", version = "0.9.1" }
telltale-theory = { path = "../theory", version = "0.9.1" }
futures = { workspace = true }
async-trait = { workspace = true }
async-recursion = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
bincode = { workspace = true }
time = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }
toml = { workspace = true }
sha2 = { workspace = true }
parking_lot = { workspace = true }

# Optional dependencies
rand = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
wasm-timer = { workspace = true }
getrandom = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[features]
default = []
test-utils = ["rand"]
wasm = ["getrandom/js"]
# Internal feature for WASM integration tests (requires wasm-pack)
_wasm_integration_tests = []

[[bench]]
name = "choreography_bench"
harness = false

[[bench]]
name = "telltale_handler_bench"
harness = false

[[bin]]
name = "choreo-fmt"
path = "src/bin/choreo_fmt.rs"
