[package]
name = "rumpsteak-aura-fsm"
version = "0.7.0"
authors = ["Sam Hart"]
edition = "2021"
description = "Session types for asynchronous communication between multiple parties (Aura flavored)."
readme = "../../README.md"
repository = "https://github.com/aura-project/rumpsteak-aura"
license = "MIT"
keywords = ["async", "deadlock", "safety", "session", "types"]
categories = ["asynchronous", "concurrency"]

[[bin]]
name = "subtype"
path = "src/subtype/main.rs"
required-features = ["argh", "atty", "parsing", "subtyping", "termcolor"]

[dependencies]
argh = { version = "0.1", optional = true }
atty = { version = "0.2", optional = true }
bitvec = { version = "0.20", optional = true }
codespan-reporting = { version = "0.11", optional = true }
logos = { version = "0.12", optional = true }
memchr = { version = "2.4", optional = true }
petgraph = "0.6"
termcolor = { version = "1.1", optional = true }
thiserror = { workspace = true }
rumpsteak-types = { path = "../types", version = "0.7.0", optional = true }

[dev-dependencies]
proptest = { workspace = true }

[features]
parsing = ["bitvec", "codespan-reporting", "logos", "memchr"]
subtyping = []
convert = ["rumpsteak-types"]
