[package]
name = "telltale-language"
version = "16.0.0"
authors = ["Sam Hart"]
edition = "2021"
rust-version = "1.75"
description = "Shared choreography frontend for Telltale DSL parsing, projection, and macro code generation"
readme = "../../README.md"
repository = "https://github.com/hxrts/telltale"
license = "MIT OR Apache-2.0"

[lib]
bench = false

[dependencies]
telltale-types = { path = "../types", version = "16.0.0" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
