[package]
name = "lean-exporter"
version = "0.7.0"
edition = "2021"
description = "Internal tool: Exports choreographies to JSON for Lean verification"
publish = false  # Internal development tool, not published to crates.io

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
rumpsteak-aura-choreography = { path = "../choreography" }
