[package]
name = "telltale-machine"
version = "16.0.0"
authors = ["Sam Hart"]
edition = "2021"
autobenches = false
rust-version = "1.75"
description = "Protocol machine for choreographic session type protocols"
readme = "../../README.md"
repository = "https://github.com/hxrts/telltale"
license = "MIT OR Apache-2.0"
keywords = ["session", "types", "vm", "choreography", "runtime"]
categories = ["compilers"]

[lib]
bench = false

[features]
default = []
wasm = ["getrandom/js"]
multi-thread = ["rayon"]

[dependencies]
telltale-types = { path = "../types", version = "=16.0.0" }
telltale-theory = { path = "../theory", version = "=16.0.0" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
ciborium = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
rayon = { version = "1", optional = true }
cfg-if = { workspace = true }
parking_lot = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true, features = ["js"] }
wasm-bindgen = { workspace = true }

[dev-dependencies]
telltale-theory = { path = "../theory", version = "=16.0.0" }
assert_matches = { workspace = true }
wasm-bindgen-test = "0.3"
telltale-bridge = { path = "../bridge" }
tempfile = { workspace = true }
serde_yaml = "0.9"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true

[[bench]]
name = "protocol_machine_runtime_bench"
harness = false
