[package]
name = "telltale-macros"
version = "0.9.1"
authors = ["Sam Hart"]
edition = "2021"
description = "Procedural macros for Telltale session types (Aura flavored)."
readme = "../../README.md"
repository = "https://github.com/hxrts/telltale"
license = "MIT"
keywords = ["async", "deadlock", "safety", "session", "types"]
categories = ["asynchronous", "concurrency"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["parsing"] }

[features]
